[package]
name = "template"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "template"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
integer-sqrt = "0.1.5"
pyth-client = "0.5.1"
pyth-sdk-solana = "0.7.1"
uint = "0.9"
